# prview-rs

./: .gitignore  .prview-policy.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  action.yml  install.sh  semgrep.yml
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gate.yml  release.yml
assets/branding/: README.md  head-snippet.html
docs/: INSTALL.md  RELEASING.md  architecture.md  configuration.md  development.md  gate-playbook.md  mcp-smoke.md  mcp.md  usage.md
docs/contracts/: ai_index.md  merge_gate.md
docs/examples/: artifact-pack.md
locales/: README.md  en.json  pl.json
src/: check_id.rs  gate.rs  lib.rs  main.rs  paths.rs  proc.rs
src/artifacts/: ai_index.rs  audit.rs  brand.rs  context.rs  context_artifacts.rs  findings.rs  git_artifacts.rs  history.rs  lint.rs  merge_gate.rs  mod.rs  ownership.rs  pr_review.rs  report.rs  review_html.rs  root_cause.rs  sanity.rs  tests.rs  verdict.rs
src/artifacts/dashboard/: assets.rs  mod.rs  sections.rs  tests.rs  trends_tests.rs
src/artifacts/parsers/: cargo_test.rs  clippy.rs  eslint.rs  mod.rs  semgrep.rs  stylelint.rs
src/cache/: mod.rs
src/checks/: cargo.rs  mod.rs  python.rs  semgrep.rs  typescript.rs
src/cli/: mod.rs
src/config/: manifest.rs  mod.rs
src/git/: cmd.rs  mod.rs  snapshot.rs  worktree.rs
src/heuristics/: loctree.rs  mod.rs
src/mcp/: mod.rs  read.rs  run.rs  types.rs
src/mdrender/: css.rs  highlight.rs  mod.rs  sanitize.rs  tests.rs  theme.rs
src/output/: mod.rs
src/policy/: engine.rs  mod.rs
src/regression/: deps.rs  diff.rs  mod.rs  perf.rs  score.rs  tests.rs
src/scope/: filter.rs  mod.rs  output.rs
src/state/: diff.rs  hot.rs  mod.rs  repo.rs  tree.rs
src/storage/: mod.rs
src/tui/: keys.rs  mod.rs  types.rs  ui.rs
tests/: eval_suite.rs  gate_exit_codes.rs  git_cmd_isolation.rs  json_contract.rs  mcp_contract.rs  mcp_probe.rs  module_integrity.rs  scope_integration.rs
tools/: compare_runs.py  generate_draft_comment.py  publish-checklist.sh  release-gate.sh  semver.sh  setup_hooks.sh  validate_merge_gate.py  version-bump.sh
tools/githooks/: pre-commit  pre-push
(+25 files in other folders)
