[package]
name = "prview"
version = "0.6.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["vetcoders <hello@vetcoders.io>"]
description = "PR Review & Artifact Generator - cross-language PR analysis tool"
license = "BUSL-1.1"
repository = "https://github.com/vetcoders/prview-rs"
homepage = "https://github.com/vetcoders/prview-rs"
documentation = "https://docs.rs/prview"
readme = "README.md"
keywords = ["git", "pr", "review", "diff", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".gitignore",
    "Cargo.toml.orig",
    "docs/.DS_Store",
    "docs/plans/",
    "Makefile",
    ".prview-policy.yml",
    "tools/",
]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
async-trait = "0.1"

# Git operations
git2 = "0.20"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"

# Terminal UI
colored = "3"

# Ratatui TUI
ratatui = "0.30"
crossterm = "0.29"
futures = "0.3"

# Home directory
dirs = "6"

# File operations
walkdir = "2"
glob = "0.3"
zip = "8"
which = "8"
notify = "8.2"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1"

# Code analysis (loctree-suite)
loctree = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Temp files (snapshots)
tempfile = "3"

# POSIX (process-alive check for lock files)
libc = "0.2"
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
# Markdown rendering (self-contained artifact HTML); pure-Rust regex backend
# (syntect-fancy) avoids the onig C dependency, and disabling defaults drops the
# comrak CLI/clap/xdg surface we do not use.
comrak = { version = "0.53", default-features = false, features = ["syntect-fancy"] }
ammonia = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
name = "prview"
path = "src/lib.rs"

[[bin]]
name = "prview"
path = "src/main.rs"
